# identification_tester

./: .gitignore  ControlWindow.qml  DisplayWindow.qml  README.md  WindowSelectorOverlay.qml  gpu_yolo_example.py  main.py  main.qml  pyproject.toml  pyproject.toml.bak  qt.conf  requirements.txt  test_dpi.py
python/: feature_matching.py  screen_capture.py  template_matching.py  windows_select.py  yolo_matching_pure.py  yolo_orb_matching.py
qml/: ControlWindow.qml  DisplayWindow.qml  MatchResultOverlay.qml  WindowSelectorOverlay.qml
