[project]
name = "identification-tester"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "psutil>=7.0.0",
    "pyautogui>=0.9.54",
    "pyside6==6.8.2.1",
    "pywin32>=311",
    "mss>=9.0.1",
    "ultralytics>=8.3.189",
]
